deployments/99_on_hold/authelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ingress
  namespace: authelia
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ${AUTHELIA_HOST}
      secretName: authelia-ingress
  rules:
    - host: ${AUTHELIA_HOST}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: authelia
                port:
                  number: 80
